--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,16 @@
 name = "rust-yew-notion-clone"
 version = "0.1.0"
 edition = "2021"
-description = "Template for starting a Yew project using Trunk"
+description = "Notion clone with yew.rs"
 readme = "README.md"
-repository = "https://github.com/yewstack/yew-trunk-minimal-template"
+repository = "https://github.com/adrian7123/rust-yew-notion-clone"
 license = "MIT OR Apache-2.0"
 keywords = ["yew", "trunk"]
 categories = ["gui", "wasm", "web-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+gloo-console = "0.3.0"
+wasm-bindgen = "0.2.87"
+wasm-logger = "0.2.0"
 yew = { version = "0.20", features = ["csr"] }
