--- a/Trunk.toml
+++ b/Trunk.toml
@@ -1,2 +1,10 @@
 [serve]
 port = 5000
+
+[[hooks]]
+stage = "post_build"
+command = "sh"
+command_arguments = [
+  "-c",
+  "npx tailwindcss -i ./styles/main.css -o ./dist/.stage/index.css",
+]
