--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ categories = ["gui", "wasm", "web-programming"]
 gloo-console = "0.3.0"
 wasm-bindgen = "0.2.87"
 wasm-logger = "0.2.0"
+web-sys = { version = "0.3.64", features = ["HtmlDocument", "EventTarget"] }
 yew = { version = "0.20", features = ["csr"] }
