--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ categories = ["gui", "wasm", "web-programming"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 gloo-console = "0.3.0"
+serde_json = "1.0.107"
 wasm-bindgen = "0.2.87"
 wasm-logger = "0.2.0"
 web-sys = { version = "0.3.64", features = ["HtmlDocument", "EventTarget"] }
